--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -163,8 +163,8 @@
                             target="_blank"> <img src="assets/logo-wckt9.webp" alt="9wickets"
                                 class="img-fluid partner-image copy"> </a> <a  href="https://www.baazi365.co/#/dash"
                             target="_blank"> <img src="assets/partner-logo-new/Baazi365.webp" alt="baazi365"
-                                class="img-fluid partner-image copy"> </a> <a href="https://www.betgame.live/#/dash"
-                            target="_blank"> <img src="assets/partner-logo-new/betgame.webp" alt="betgame"
+                                class="img-fluid partner-image copy"> </a> <a href="https://www.betgame247.live/#/dash"
+                            target="_blank"> <img src="assets/partner-logo-new/betgame247.webp" alt="betgame"
                                 class="img-fluid partner-image copy"> </a> </div>
                     <div class="partners_logo_box"> <a href="https://www.rajbet.win/#/dash" target="_blank"> <img
                                 src="assets/partner-logo-new/rajbet.webp" alt="rajbet"
@@ -181,13 +181,13 @@
                     data-aos-duration="1500" data-aos-delay="000">
                     <div class="partners_logo_box"> <a class="box" href="https://velkii365.com/#/home" target="_blank">
                             <img src="assets/partner-logo-new/velkii365.webp" alt="velkii365"
-                                class="img-fluid partner-image copy"> </a> <a class="box"
+                                class="img-fluid partner-image copy"> </a><a class="box"
+                                href="https://www.baazi365.co/#/dash" target="_blank"> <img
+                                    src="assets/partner-logo-new/Baazi365.webp" alt="baazi365" class="img-fluid partner-image copy">
+                            </a> <a class="box"
                             href="https://exch.9xbet.vip/#/home" target="_blank"> <img
                                 src="assets/partner-logo-new/xbet9.webp" alt="xbet9"
-                                class="img-fluid partner-image copy"> </a> <a class="box"
-                            href="https://baaji365.biz/#/home" target="_blank"> <img
-                                src="assets/partner-logo-new/baaji365biz.webp" alt="baaji365biz"
-                                class="img-fluid partner-image copy"> </a> <a class="box"
+                                class="img-fluid partner-image copy"> </a>  <a class="box"
                             href="https://velkiex123.biz/#/home" target="_blank"> <img
                                 src="assets/partner-logo-new/velkiex123biz.webp" alt="velkiex123biz"
                                 class="img-fluid partner-image copy"> </a> <a class="box"
@@ -212,6 +212,9 @@
                             href="https://www.lc247.live/#/dash" target="_blank"> <img
                                 src="assets/partner-logo-new/lc247.webp" alt="lc247"
                                 class="img-fluid partner-image copy"> </a> <a class="box"
+                                href="https://baaji365.biz/#/home" target="_blank"> <img
+                                    src="assets/partner-logo-new/baaji365biz.webp" alt="baaji365biz"
+                                    class="img-fluid partner-image copy"> </a><a class="box"
                                 href="https://www.9wickets.site/#/dash" target="_blank"> <img src="assets/logo-wckt9.webp"
                                 alt="9wickets" class="img-fluid partner-image copy"> </a> <a class="box"
                             href="https://www.rajbet.win/#/dash" target="_blank"> <img
@@ -231,12 +234,9 @@
                             href="https://www.playbdt.live/#/dash" target="_blank"> <img
                                 src="assets/partner-logo-new/playbdt.webp" alt="playbdt"
                                 class="img-fluid partner-image copy"> </a> <a class="box"
-                            href="https://www.betgame.live/#/dash" target="_blank"> <img
-                                src="assets/partner-logo-new/betguru.webp" alt="betguru"
-                                class="img-fluid partner-image copy"> </a> <a class="box"
-                            href="https://www.baazi365.co/#/dash" target="_blank"> <img
-                                src="assets/partner-logo-new/Baazi365.webp" alt="baazi365" class="img-fluid partner-image copy">
-                        </a> <a class="box" href="https://auraexch.live/#/home" target="_blank"> <img
+                            href="https://www.betgame247.live/#/dash" target="_blank"> <img
+                                src="assets/partner-logo-new/betgame247.webp" alt="betguru"
+                                class="img-fluid partner-image copy"> </a>  <a class="box" href="https://auraexch.live/#/home" target="_blank"> <img
                                 src="assets/aura.webp" alt="aura" class="img-fluid partner-image copy"> </a> <a
                             class="box" href=" https://www.bazi365.live/#/dash" target="_blank"> <img
                                 src="assets/partner-logo-new/bazi365.webp" alt="bazi365"
