--- a/src/app/our-theme/our-theme.component.css
+++ b/src/app/our-theme/our-theme.component.css
@@ -1,1 +1,385 @@
-body,h2{margin:0}body{font-family:Arial,sans-serif;background-color:#f0f0f0;display:flex;justify-content:center;align-items:center;height:100vh}.card{width:250px;height:300px;background:linear-gradient(45deg,#a0c528,#769026);position:relative;overflow:hidden;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.3);transition:transform .3s,box-shadow .3s;justify-content:center;margin:0 auto}.card-content,.card::before{position:absolute;left:0;transition:transform .3s;width:100%}.card::before{content:"";top:0;height:100%;background-color:rgba(255,255,255,.2);transform-origin:left;transform:skewX(-45deg) translateX(-100%)}.card:hover{transform:scale(1.05);box-shadow:0 0 20px rgba(0,0,0,.5)}.card:hover::before{transform:skewX(-45deg) translateX(100%)}.card-content{padding:20px;text-align:center;bottom:0;background-color:rgba(0,0,0,.8);color:#fff;transform:translateY(100%);height:35%}.card:hover .card-content{transform:translateY(0)}h2{font-size:14px;padding-bottom:20px}p{font-size:16px;margin:10px 0}.flip-box-front{display:flex;flex-direction:column;justify-content:center;align-items:center;height:105%;text-align:center}.flip-box-front img{width:90px}.logoname{width:100%;font-size:30px;font-weight:700;padding-top:40px;color:#000}.card-container{display:flex;flex-wrap:wrap;justify-content:space-between;gap:20px}.container{display:grid;grid-template-columns:repeat(auto-fill,minmax(235px,2fr));gap:20px;margin-top:139px;width:50%}.logo2{width:170px!important}.logo3,.logo4{width:240px!important}.logo5{width:205px!important}.logo6{width:191px!important}.logo10,.logo7,.logo8,.logo9{width:200px!important}.btn-group-vertical>.btn-group:after,.btn-group-vertical>.btn-group:before,.btn-toolbar:after,.btn-toolbar:before,.clearfix:after,.clearfix:before,.container-fluid:after,.container-fluid:before,.container:after,.container:before,.dl-horizontal dd:after,.dl-horizontal dd:before,.form-horizontal .form-group:after,.form-horizontal .form-group:before,.modal-footer:after,.modal-footer:before,.modal-header:after,.modal-header:before,.nav:after,.nav:before,.navbar-collapse:after,.navbar-collapse:before,.navbar-header:after,.navbar-header:before,.navbar:after,.navbar:before,.pager:after,.pager:before,.panel-body:after,.panel-body:before,.row:after,.row:before{display:table;content:none}@media (min-width:1400px){.container,.container-lg,.container-md,.container-sm,.container-xl,.container-xxl{max-width:994px}}.container1{display:flex;flex-wrap:wrap;justify-content:space-between;padding:20px;font-family:Poppins}.left-content{flex:1;padding:20px;line-height:1.8}.right-images{flex:1;display:flex;flex-direction:column;gap:10px}.right-images img{max-width:100%}.main-container{margin-top:90px}.container1 ul li{font-size:15px;margin-left:20px}@media (max-width:768px){.card{width:150px;height:200px;justify-content:center;margin:15px auto}.logo1{width:70px!important}.logo2{width:100px!important}.logo3{width:165px!important}.logo4,.logo5{width:130px!important}.logo6{width:125px!important}.logo7,.logo9{width:128px!important}.logo8{width:126px!important}.logo10{width:127px!important}.logoname{font-size:23px}.container{grid-template-columns:repeat(2,minmax(170px,2fr));gap:0;margin-top:66px;width:100%!important}.container_row{display:flex;flex-direction:column}.container_col{width:90%!important;margin-top:25px!important;margin-left:18px!important}.theme_header{font-size:24px!important}.container{flex-direction:column;text-align:center}.left-content,.right-images{flex:none;width:100%}.card-content{padding:4px;height:32%}h2{font-size:8px;padding-bottom:5px;padding-top:7px}}.fa-copy{margin-left:20px;cursor:pointer}.icon{margin-left:56px}.fa-check{margin-left:20px;color:green}.theme_header{color:#a0c228;font-size:34px;font-weight:600;font-family:Poppins;margin-top:20px}.container_row{display:flex;justify-content:center}.container_col{width:30%;margin-top:139px;margin-left:75px}.theme_card{width:98%;background:#a0c228;border-radius:5px;font-size:16px;margin-top:30px}.theme_h,.theme_p{color:#fff;font-size:18px}.theme_card:hover{box-shadow:10px 10px 5px #585858}.theme_card_container{padding:16px}.theme_p{font-weight:350}.theme_h{font-weight:500}.disc{list-style:disc}
+body,
+h2 {
+    margin: 0
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh
+}
+
+.card {
+    width: 250px;
+    height: 300px;
+    background: linear-gradient(45deg, #a0c528, #769026);
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    transition: transform .3s, box-shadow .3s;
+    justify-content: center;
+    margin: 0 auto
+}
+.card2{
+    margin-left: 56rem;
+top: 3rem;
+}
+.card-content,
+.card::before {
+    position: absolute;
+    left: 0;
+    transition: transform .3s;
+    width: 100%
+}
+
+.card::before {
+    content: "";
+    top: 0;
+    height: 100%;
+    background-color: rgba(255, 255, 255, .2);
+    transform-origin: left;
+    transform: skewX(-45deg) translateX(-100%)
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(0, 0, 0, .5)
+}
+
+.card:hover::before {
+    transform: skewX(-45deg) translateX(100%)
+}
+
+.card-content {
+    padding: 20px;
+    text-align: center;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .8);
+    color: #fff;
+    transform: translateY(100%);
+    height: 35%
+}
+
+.card:hover .card-content {
+    transform: translateY(0)
+}
+
+h2 {
+    font-size: 14px;
+    padding-bottom: 20px
+}
+
+p {
+    font-size: 16px;
+    margin: 10px 0
+}
+
+.flip-box-front {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 105%;
+    text-align: center
+}
+
+.flip-box-front img {
+    width: 90px
+}
+
+.logoname {
+    width: 100%;
+    font-size: 30px;
+    font-weight: 700;
+    padding-top: 40px;
+    color: #000
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(235px, 2fr));
+    gap: 20px;
+    margin-top: 139px;
+    width: 50%
+}
+
+.logo2 {
+    width: 170px !important
+}
+
+.logo3,
+.logo4 {
+    width: 240px !important
+}
+
+.logo5 {
+    width: 205px !important
+}
+
+.logo6 {
+    width: 191px !important
+}
+
+.logo10,
+.logo7,
+.logo8,
+.logo9 {
+    width: 200px !important
+}
+
+.btn-group-vertical>.btn-group:after,
+.btn-group-vertical>.btn-group:before,
+.btn-toolbar:after,
+.btn-toolbar:before,
+.clearfix:after,
+.clearfix:before,
+.container-fluid:after,
+.container-fluid:before,
+.container:after,
+.container:before,
+.dl-horizontal dd:after,
+.dl-horizontal dd:before,
+.form-horizontal .form-group:after,
+.form-horizontal .form-group:before,
+.modal-footer:after,
+.modal-footer:before,
+.modal-header:after,
+.modal-header:before,
+.nav:after,
+.nav:before,
+.navbar-collapse:after,
+.navbar-collapse:before,
+.navbar-header:after,
+.navbar-header:before,
+.navbar:after,
+.navbar:before,
+.pager:after,
+.pager:before,
+.panel-body:after,
+.panel-body:before,
+.row:after,
+.row:before {
+    display: table;
+    content: none
+}
+
+@media (min-width:1400px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
+        max-width: 994px
+    }
+}
+
+.container1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+    font-family: Poppins
+}
+
+.left-content {
+    flex: 1;
+    padding: 20px;
+    line-height: 1.8
+}
+
+.right-images {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px
+}
+
+.right-images img {
+    max-width: 100%
+}
+
+.main-container {
+    margin-top: 90px
+}
+
+.container1 ul li {
+    font-size: 15px;
+    margin-left: 20px
+}
+
+@media (max-width:768px) {
+    .card {
+        width: 150px;
+        height: 200px;
+        justify-content: center;
+        margin: 15px auto
+    }
+
+    .logo1 {
+        width: 70px !important
+    }
+
+    .logo2 {
+        width: 100px !important
+    }
+
+    .logo3 {
+        width: 165px !important
+    }
+
+    .logo4,
+    .logo5 {
+        width: 130px !important
+    }
+
+    .logo6 {
+        width: 125px !important
+    }
+
+    .logo7,
+    .logo9 {
+        width: 128px !important
+    }
+
+    .logo8 {
+        width: 126px !important
+    }
+
+    .logo10 {
+        width: 127px !important
+    }
+
+    .logoname {
+        /* font-size: 23px */
+        font-size: 16px;
+    }
+
+    .container {
+        grid-template-columns: repeat(2, minmax(170px, 2fr));
+        gap: 0;
+        margin-top: 66px;
+        width: 100% !important
+    }
+
+    .container_row {
+        display: flex;
+        flex-direction: column
+    }
+
+    .container_col {
+        width: 90% !important;
+        margin-top: 25px !important;
+        margin-left: 18px !important
+    }
+
+    .theme_header {
+        font-size: 24px !important
+    }
+
+    .container {
+        flex-direction: column;
+        text-align: center
+    }
+
+    .left-content,
+    .right-images {
+        flex: none;
+        width: 100%
+    }
+
+    .card-content {
+        padding: 4px;
+        height: 32%
+    }
+
+    h2 {
+        font-size: 8px;
+        padding-bottom: 5px;
+        padding-top: 7px
+    }
+
+    .card2{
+     
+        top: 0rem;
+    }
+}
+
+.fa-copy {
+    margin-left: 20px;
+    cursor: pointer
+}
+
+.icon {
+    margin-left: 56px
+}
+
+.fa-check {
+    margin-left: 20px;
+    color: green
+}
+
+.theme_header {
+    color: #a0c228;
+    font-size: 34px;
+    font-weight: 600;
+    font-family: Poppins;
+    margin-top: 20px
+}
+
+.container_row {
+    display: flex;
+    justify-content: center
+}
+
+.container_col {
+    width: 30%;
+    margin-top: 139px;
+    margin-left: 75px
+}
+
+.theme_card {
+    width: 98%;
+    background: #a0c228;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-top: 30px
+}
+
+.theme_h,
+.theme_p {
+    color: #fff;
+    font-size: 18px
+}
+
+.theme_card:hover {
+    box-shadow: 10px 10px 5px #585858
+}
+
+.theme_card_container {
+    padding: 16px
+}
+
+.theme_p {
+    font-weight: 350
+}
+
+.theme_h {
+    font-weight: 500
+}
+
+.disc {
+    list-style: disc
+}
