--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -244,5 +244,27 @@
 
   </div>
 </div>
+
+<section>
+  <div class="card card2">
+    <div class="flip-box-front">
+      <a href="https://mostvipgame.vrnlexch.com/#/" target="_blank">
+        <img class="lb_partner_logo logo9" src="assets/mostvipgame-logo.webp" loading="lazy" alt="mostvipgame"></a>
+      <h4 class="logoname">mostvipgame</h4>
+    </div>
+    <div class="card-content">
+      <h2>
+        Username : <span id="vrnldemo1">vrnldemo</span>
+        <i class="fas fa-copy" (click)="copytoclip('vrnldemo10')" [style.display]="copyed === 'vrnldemo10' ? 'none' : 'inline'"></i>
+        <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo10'"></i>
+      </h2>
+      <h2>
+        Password : <span id="password1">Asdf1234</span>
+        <i class="fas fa-copy" (click)="copytoclip('password10')" [style.display]="copyed === 'password10' ? 'none' : 'inline'"></i>
+        <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password10'"></i>
+      </h2>
+    </div>
+  </div>
+</section>
 </div>
 <app-footer></app-footer>
