--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
 					<span ui-key="displayText">Twitter</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
-				<a target="_blank" href="skype:live:9960f32f776599a2?chat">
+				<a target="_blank" href="skype:live:.cid.2d0bfe0a892473db?chat">
 					<img src="assets\icons8-skype.gif" ui-key="realIconPath" alt="Visit our skype page">
 					<span ui-key="displayText">skype</span></a><hr>
 			</li>
