--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -9,7 +9,7 @@
       <div class="contact_social">
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
-            <a href="skype:live:9960f32f776599a2?chat">
+            <a href="skype:live:.cid.2d0bfe0a892473db?chat">
               <img src="assets/Skype_logo.webp" loading="lazy" alt="skype"  width="140" height="63"/>
             </a>
           </div>
