--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -19,7 +19,7 @@
               target="_blank"> Facebook</a> 
               
               <a style="color: #00aff0;"
-              href="skype:live:9960f32f776599a2?chat"> Skype</a> .</strong> If you still
+              href="skype:live:.cid.2d0bfe0a892473db?chat"> Skype</a> .</strong> If you still
           can't find the answer you're looking for, just
           <b routerLink="/contact">Contact us ! </b>
         </p>
