--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -116,7 +116,7 @@
           <a target="_blank"
             href="https://api.whatsapp.com/send/?phone=%2B919326837979&text&type=phone_number&app_absent=0"
             style="color: rgb(0, 0, 0);" aria-label="Visit whatsapp Profile"><i class="fa-brands fa-whatsapp"></i></a>
-          <a target="_blank" href="skype:live:9960f32f776599a2?chat" style="color: rgb(0, 0, 0);" aria-label="Visit skype Profile"> <i
+          <a target="_blank" href="skype:live:.cid.2d0bfe0a892473db?chat" style="color: rgb(0, 0, 0);" aria-label="Visit skype Profile"> <i
               class="fa-brands fa-skype"></i></a>
           <a target="_blank" href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D" style="color: rgb(0, 0, 0);" aria-label="Visit instagram Profile"> <i
               class="fa-brands fa-instagram"></i></a>
