--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -1,1 +1,100 @@
-<app-header2></app-header2><div class="content"><section class="container6"> <div class="index2-row"> <div class="index2-col"> <h1 style="font-family: 'Raleway', sans-serif;"> Live Casino software</h1> <p class="index2-col-para1">Our <strong> live Casino platform </strong> empowers you to activate <strong> the top live providers</strong> known for their <strong> exceptional quality and mathematical integrity.</strong> </p> <p class="index2-col-para1" style="padding: 7px 0px;">We're dedicated to providing you with the ultimate live casino experience. Whether you're a seasoned gamer or new to the world of online casinos, our platform offers an immersive, real-time gaming experience that's second to none. </p> <p class="index2-col-para2">Vrnl's Live Casino solution provides a comprehensive suite of services, including: </p> <ul> <li>Full History Reporting Tools</li> <li>Game History Visualization</li> <li>Game Configurations</li> <li>Risk Management Tools</li> <li>Player Management</li> <li>Affiliate Management Tools</li> <li style=" font-family: 'Raleway', sans-serif;">Multilevel Hierarchy Agent Structure<br><br></li> </ul> <p class="index2-col-para3" ><b>We've developed various secure integration methods, all of which are user-friendly and designed for easy implementation with our live casino API.</b></p> <h3 class="demo-live"><strong > Demo live casino solutions</strong></h3> <a class="demo-link" href="https://betwin123.live/#/home/hot" target="_blank"> <p> https://betwin123.live/home/hot</p> </a> </div> <div class="index2-col2"> <div class="iframe_sec_images"> <img src="assets/live casino.webp" width="100%" loading="lazy" alt="live casino"> </div> </div> </div></section><section class="container7"> <div class="container7-row"> <div class="container7-col1"> <img class="container_images_b" src="assets/vrnl image 8_11zon.webp" loading="lazy" alt="live casino software"> </div> <div class="container7-col2"> <h2 ><strong style="color: #575756;">live casino API</strong> integrations</h2> <p class="container7-col2-content">You can have our live casino software up and running within a matter of days. What's more, we provide comprehensive management services, ensuring that the entire operation is overseen by our experts.<strong style="color: #575756;">We also guarantee access to the most extensive selection of live games available online. </strong></p> <div class="card1"> <div class="card_row1"> <div class="table-content1"> <p > <span class="tab_content" > In our user-friendly Live Casino Game Lobby</span> <br> <br> <span class="tab_content" >you can</span> <b> find games like:</b> <br> <br><b>Live Roulette, Live Baccarat, Live Blackjack and Live Poker, Dice and Number games.</b></p> </div> <div class="table-col1"> <div class="col_1"> <p class="text">European Roulette</p> </div> <div class="col_2"> <p class="text_1_main">Blackjack</p> </div> </div> <div class="table-col1"> <div class="col_1"> <p class="text">Baccarat</p> </div> <div class="col_2"> <p class="text_2_main">Caribbean Stud</p> </div> </div> <div class="table-col1"> <div class="col_1"> <p class="text">Casino Hold’em</p> </div> <div class="col_2"> <p class="text_3_main">American Roulette</p> </div> </div> <div class="table-col1"> <div class="col_1"> <p class="text">Sic Bo</p> </div> <div class="col_2"> <p class="text_4_main" >Craps</p> </div> </div> <div class="table-col1"> <div class="col_1"> <p class="text">Dragon Tiger</p> </div> <div class="col_2"> <p class="text_5_main"> Bingo</p> </div> </div> </div> </div> <button class="btns_lives_sec" routerLink="/contact">Book a demo</button> </div></div></section></div><app-footers2></app-footers2>
+<app-header2></app-header2>
+<div class="content">
+    <section class="container6">
+        <div class="index2-row">
+            <div class="index2-col">
+                <h1 style="font-family: 'Raleway', sans-serif;"> Live Casino software</h1>
+                <p class="index2-col-para1">Our <strong> live Casino platform </strong> empowers you to activate
+                    <strong> the top live providers</strong> known for their <strong> exceptional quality and
+                        mathematical integrity.</strong> </p>
+                <p class="index2-col-para1" style="padding: 7px 0px;">We're dedicated to providing you with the ultimate
+                    live casino experience. Whether you're a seasoned gamer or new to the world of online casinos, our
+                    platform offers an immersive, real-time gaming experience that's second to none. </p>
+                <p class="index2-col-para2">Vrnl's Live Casino solution provides a comprehensive suite of services,
+                    including: </p>
+                <ul>
+                    <li>Full History Reporting Tools</li>
+                    <li>Game History Visualization</li>
+                    <li>Game Configurations</li>
+                    <li>Risk Management Tools</li>
+                    <li>Player Management</li>
+                    <li>Affiliate Management Tools</li>
+                    <li style=" font-family: 'Raleway', sans-serif;">Multilevel Hierarchy Agent Structure<br><br></li>
+                </ul>
+                <p class="index2-col-para3"><b>We've developed various secure integration methods, all of which are
+                        user-friendly and designed for easy implementation with our live casino API.</b></p>
+                <h3 class="demo-live"><strong> Demo live casino solutions</strong></h3> <a class="demo-link"
+                    href="https://gullybet.vrnlexch.com/#/home/hot" target="_blank">
+                    <p> https://gullybet.vrnlexch.com/#/home/hot</p>
+                </a>
+            </div>
+            <div class="index2-col2">
+                <div class="iframe_sec_images"> <img src="assets/live casino.webp" width="100%" loading="lazy"
+                        alt="live casino"> </div>
+            </div>
+        </div>
+    </section>
+    <section class="container7">
+        <div class="container7-row">
+            <div class="container7-col1"> <img class="container_images_b" src="assets/vrnl image 8_11zon.webp"
+                    loading="lazy" alt="live casino software"> </div>
+            <div class="container7-col2">
+                <h2><strong style="color: #575756;">live casino API</strong> integrations</h2>
+                <p class="container7-col2-content">You can have our live casino software up and running within a matter
+                    of days. What's more, we provide comprehensive management services, ensuring that the entire
+                    operation is overseen by our experts.<strong style="color: #575756;">We also guarantee access to the
+                        most extensive selection of live games available online. </strong></p>
+                <div class="card1">
+                    <div class="card_row1">
+                        <div class="table-content1">
+                            <p> <span class="tab_content"> In our user-friendly Live Casino Game Lobby</span> <br> <br>
+                                <span class="tab_content">you can</span> <b> find games like:</b> <br> <br><b>Live
+                                    Roulette, Live Baccarat, Live Blackjack and Live Poker, Dice and Number games.</b>
+                            </p>
+                        </div>
+                        <div class="table-col1">
+                            <div class="col_1">
+                                <p class="text">European Roulette</p>
+                            </div>
+                            <div class="col_2">
+                                <p class="text_1_main">Blackjack</p>
+                            </div>
+                        </div>
+                        <div class="table-col1">
+                            <div class="col_1">
+                                <p class="text">Baccarat</p>
+                            </div>
+                            <div class="col_2">
+                                <p class="text_2_main">Caribbean Stud</p>
+                            </div>
+                        </div>
+                        <div class="table-col1">
+                            <div class="col_1">
+                                <p class="text">Casino Hold’em</p>
+                            </div>
+                            <div class="col_2">
+                                <p class="text_3_main">American Roulette</p>
+                            </div>
+                        </div>
+                        <div class="table-col1">
+                            <div class="col_1">
+                                <p class="text">Sic Bo</p>
+                            </div>
+                            <div class="col_2">
+                                <p class="text_4_main">Craps</p>
+                            </div>
+                        </div>
+                        <div class="table-col1">
+                            <div class="col_1">
+                                <p class="text">Dragon Tiger</p>
+                            </div>
+                            <div class="col_2">
+                                <p class="text_5_main"> Bingo</p>
+                            </div>
+                        </div>
+                    </div>
+                </div> <button class="btns_lives_sec" routerLink="/contact">Book a demo</button>
+            </div>
+        </div>
+    </section>
+</div><app-footers2></app-footers2>
