--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -133,7 +133,7 @@
 
 <div class="card">
   <div class="flip-box-front">
-    <a href="https://mostvipgame.vrnlexch.com/#/" target="_blank">
+    <a href="https://mostvipgame.vrnlexch.com/m/#/" target="_blank">
       <img class="lb_partner_logo logo9" src="assets/mostvipgame-logo.webp" loading="lazy" alt="mostvipgame"></a>
     <h4 class="logoname">mostvipgame</h4>
   </div>
