added telegarm link

--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -9,8 +9,8 @@
       <div class="contact_social">
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
-            <a href="skype:live:.cid.2d0bfe0a892473db?chat">
-              <img src="assets/Skype_logo.webp" loading="lazy" alt="skype"  width="140" height="63"/>
+            <a href="https://t.me/Harper_330">
+              <img src="assets/telegarm-logo.png" loading="lazy" alt="skype"   height="63"/>
             </a>
           </div>
           <div class="row_col_1">
@@ -33,11 +33,11 @@
           <div class="row_col_1">
             <div class="row_2">
            
-              <a href="https://wa.me/+918268808222" target="_blank">
-                <p class="contact_a">+918268808222 | </p></a
+              <a href="https://t.me/Ankitsinharca" target="_blank">
+                <p class="contact_a">Whatsapp Us Now | </p></a
               >
-              <a href="https://wa.me/+917045558242" target="_blank">
-                <p class="contact_a">  +917045558242 </p></a
+              <a href="https://t.me/Harper_330" target="_blank">
+                <p class="contact_a"> &nbsp;Talk to Us </p></a
               >
             </div>
           </div>
