--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -9,17 +9,21 @@
         <p class="freq_param">
           Below you'll find answer to the most common question please check out
           our <strong> <a style="color: #25d366;"
-              href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0"
+              href="https://t.me/Ankitsinharca"
               target="_blank"> Whatsapp</a> <a style="background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
               -webkit-text-fill-color: transparent;
               -webkit-background-clip: text;" target="_blank"
-              href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D"> Instagram</a> 
+              href="https://t.me/Harper_330"> Instagram</a> 
               <a style="color: #1a0dab;"
-              href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
+              href="https://t.me/Harper_330"
               target="_blank"> Facebook</a> 
+                <a style="color: #2299d4;"
+              href="https://t.me/Harper_330"
+              target="_blank"> Telegram</a> 
               
-              <a style="color: #00aff0;"
-              href="skype:live:.cid.2d0bfe0a892473db?chat"> Skype</a> .</strong> If you still
+              <!-- <a style="color: #00aff0;"
+              href="skype:live:.cid.2d0bfe0a892473db?chat"> Skype</a>  -->
+              .</strong> If you still
           can't find the answer you're looking for, just
           <b routerLink="/contact">Contact us ! </b>
         </p>
