--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -99,26 +99,26 @@
           </div>
         </div>
         <div class="nav_col_3" >
-          <a target="_blank" href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
+          <a target="_blank" href="https://t.me/Harper_330"
           style="color: rgb(0, 0, 0);" aria-label="Visit Facebook Profile">
           <i class="fa-brands fa-facebook-f"></i>
        </a>
-          <a target="_blank" href="https://t.me/Johnmark1974
+          <a target="_blank" href="https://t.me/Harper_330
 
 
 
           " style="color: rgb(0, 0, 0);" aria-label="Visit telegram Profile"><i
               class="fa-brands fa-telegram"></i></a>
 
-              <a target="_blank" href="https://twitter.com/VRNLOFFICIAL
+              <a target="_blank" href="https://t.me/Harper_330
           " style="color: rgb(0, 0, 0);" aria-label="Visit Twitter Profile"><i
               class="fa-brands fa-twitter"></i></a>
           <a target="_blank"
-            href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0"
+            href="https://t.me/Ankitsinharca"
             style="color: rgb(0, 0, 0);" aria-label="Visit whatsapp Profile"><i class="fa-brands fa-whatsapp"></i></a>
-          <a target="_blank" href="skype:live:.cid.2d0bfe0a892473db?chat" style="color: rgb(0, 0, 0);" aria-label="Visit skype Profile"> <i
-              class="fa-brands fa-skype"></i></a>
-          <a target="_blank" href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D" style="color: rgb(0, 0, 0);" aria-label="Visit instagram Profile"> <i
+          <!-- <a target="_blank" href="skype:live:.cid.2d0bfe0a892473db?chat" style="color: rgb(0, 0, 0);" aria-label="Visit skype Profile"> <i
+              class="fa-brands fa-skype"></i></a> -->
+          <a target="_blank" href="https://t.me/Harper_330" style="color: rgb(0, 0, 0);" aria-label="Visit instagram Profile"> <i
               class="fa-brands fa-instagram"></i></a>
                
             
