--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -9,16 +9,16 @@
         <p class="freq_param">
           Below you'll find answer to the most common question please check out
           our <strong> <a style="color: #25d366;"
-              href="https://t.me/Ankitsinharca"
+              href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0"
               target="_blank"> Whatsapp</a> <a style="background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
               -webkit-text-fill-color: transparent;
               -webkit-background-clip: text;" target="_blank"
-              href="https://t.me/Harper_330"> Instagram</a> 
+              href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D"> Instagram</a> 
               <a style="color: #1a0dab;"
-              href="https://t.me/Harper_330"
+              href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
               target="_blank"> Facebook</a> 
                 <a style="color: #2299d4;"
-              href="https://t.me/Harper_330"
+              href="https://t.me/vrnlnet"
               target="_blank"> Telegram</a> 
               
               <!-- <a style="color: #00aff0;"
