changes added email and changes in contact form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 	<div class="side-slider-content">
 		<ul id="side-cs-cont" class="contact-service-list">
 			<li id="cs-145" class="icon-fb">
-				<a target="_blank" href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/">
+				<a target="_blank" href="https://www.facebook.com/profile.php?id=61578898121804">
 					<img  src="assets/icons8-facebook.gif" alt="Visit our Facebook page">
 
 					<span ui-key="displayText">Facebook</span>
