--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="nav_col_3" >
-          <a target="_blank" href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
+          <a target="_blank" href="https://www.facebook.com/profile.php?id=61578898121804"
           style="color: rgb(0, 0, 0);" aria-label="Visit Facebook Profile">
           <i class="fa-brands fa-facebook-f"></i>
        </a>
@@ -115,6 +115,11 @@
               class="fa-brands fa-skype"></i></a> -->
           <a target="_blank" href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D" style="color: rgb(0, 0, 0);" aria-label="Visit instagram Profile"> <i
               class="fa-brands fa-instagram"></i></a>
+
+            <a target="_blank" href="mailto:vrnl.net.info@gmail.com" style="color: rgb(0, 0, 0);" aria-label="Send Email">
+    <i class="fa-solid fa-envelope"></i>
+</a>
+
                
             
         </div>
