--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -15,11 +15,19 @@
               -webkit-background-clip: text;" target="_blank"
               href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D"> Instagram</a> 
               <a style="color: #1a0dab;"
-              href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
+              href="https://www.facebook.com/profile.php?id=61578898121804"
               target="_blank"> Facebook</a> 
                 <a style="color: #2299d4;"
               href="https://t.me/vrnlnet"
               target="_blank"> Telegram</a> 
+
+              <a style="background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #2299d4);
+              -webkit-text-fill-color: transparent;
+              -webkit-background-clip: text;"  target="_blank"
+   href="mailto:vrnl.net.info@gmail.com">
+   Email
+</a>
+
               
               <!-- <a style="color: #00aff0;"
               href="skype:live:.cid.2d0bfe0a892473db?chat"> Skype</a>  -->
