--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 			<li id="cs-45" class="icon-mail">
 				<a target="_blank"  href="https://www.instagram.com/vrnl_official/">
 					<img src="assets\icons8-instagram.gif"alt="Visit our instagram page">
-					<span ui-key="displayText">instagram</span></a><hr>
+					<span ui-key="displayText">Instagram</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="https://t.me/vrnlnet">
@@ -38,7 +38,13 @@
 				<a target="_blank"
 					href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0" >
 					<img src="assets/whatsapp-gif.gif" ui-key="realIconPath" alt="Visit our whatsapp page">
-					<span ui-key="displayText">whatsapp</span></a><hr>
+					<span ui-key="displayText">Whatsapp</span></a><hr>
+			</li>
+			<li id="cs-81" class="icon-mail">
+				<a target="_blank"
+					href="mailto:vrnl.net.info@gmail.com" >
+					<img src="assets/mail.gif" ui-key="realIconPath" alt="Visit our whatsapp page">
+					<span ui-key="displayText">Mail</span></a><hr>
 			</li>
 		</ul>
 	</div>
