--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -246,6 +246,48 @@
       </div>
     </div>
 
+
+     <div class="card">
+      <div class="flip-box-front">
+        <a href="https://baji.vrnlexch.com/#/" target="_blank">
+          <img class="lb_partner_logo logo9" src="assets/baji.webp" loading="lazy" alt="world7777" style="width: 90px !important;"></a>
+        <h4 class="logoname">baji</h4>
+      </div>
+      <div class="card-content">
+        <h2>
+          Username : <span id="vrnldemo1">vrnldemo</span>
+          <i class="fas fa-copy" (click)="copytoclip('vrnldemo9')" [style.display]="copyed === 'vrnldemo9' ? 'none' : 'inline'"></i>
+          <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo9'"></i>
+        </h2>
+        <h2>
+          Password : <span id="password1">Asdf1234</span>
+          <i class="fas fa-copy" (click)="copytoclip('password9')" [style.display]="copyed === 'password9' ? 'none' : 'inline'"></i>
+          <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password9'"></i>
+        </h2>
+      </div>
+    </div>
+
+
+     <div class="card">
+      <div class="flip-box-front">
+        <a href="https://winbd.vrnlexch.com/#/home" target="_blank">
+          <img class="lb_partner_logo logo9" src="assets/winbd.webp" loading="lazy" alt="world7777"></a>
+        <h4 class="logoname">winbd</h4>
+      </div>
+      <div class="card-content">
+        <h2>
+          Username : <span id="vrnldemo1">vrnldemo</span>
+          <i class="fas fa-copy" (click)="copytoclip('vrnldemo9')" [style.display]="copyed === 'vrnldemo9' ? 'none' : 'inline'"></i>
+          <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo9'"></i>
+        </h2>
+        <h2>
+          Password : <span id="password1">Asdf1234</span>
+          <i class="fas fa-copy" (click)="copytoclip('password9')" [style.display]="copyed === 'password9' ? 'none' : 'inline'"></i>
+          <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password9'"></i>
+        </h2>
+      </div>
+    </div>
+
  
 
   </div>
