--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -10,15 +10,15 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
             <a href="https://t.me/vrnlnet" target="_blank">
-              <img src="assets/telegarm-logo.png" loading="lazy" alt="skype"   height="63"/>
+              <img src="assets/telegram-icon.png" loading="lazy" alt="skype"   height="63"/>
             </a>
           </div>
           <div class="row_col_1">
-            <p class="contact_b">English</p>
+            <p class="contact_b">Telegram</p>
           </div>
         </div>
       </div>
-      <div class="contact_social">
+      <!-- <div class="contact_social">
         <div class="contact_details">
           <div class="row_col">
             
@@ -42,7 +42,91 @@
             </div>
           </div>
         </div>
+
+
+        
+      </div> -->
+
+
+          <div class="contact_social">
+        <div class="contact_details">
+          <div class="row_col" style="cursor: pointer">
+            <a href="https://wa.me/918268808222" target="_blank">
+              <img src="assets/Whatsapp.webp" loading="lazy" alt="skype"   height="63"/>
+            </a>
+          </div>
+           <div class="row_col_1">
+            <p class="contact_b">Telegram</p>
+          </div>
+        </div>
       </div>
+
+        <div class="contact_social">
+        <div class="contact_details">
+          <div class="row_col" style="cursor: pointer">
+            <a href="https://www.facebook.com/profile.php?id=61578898121804" target="_blank">
+              <img src="assets/fb-icon.png" loading="lazy" alt="skype"   height="63"/>
+            </a>
+          </div>
+           <div class="row_col_1">
+            <p class="contact_b">Telegram</p>
+          </div>
+        </div>
+      </div>
+
+       <div class="contact_social">
+        <div class="contact_details">
+          <div class="row_col" style="cursor: pointer">
+            <a href="https://twitter.com/VRNLOFFICIAL" target="_blank">
+              <img src="assets/twitter-icon.png" loading="lazy" alt="twitter"   height="63"/>
+            </a>
+          </div>
+          <div class="row_col_1">
+            <p class="contact_b">Telegram</p>
+          </div>
+        </div>
+      </div>
+
+      
+       <div class="contact_social">
+        <div class="contact_details">
+          <div class="row_col" style="cursor: pointer">
+            <a href="https://www.instagram.com/vrnl_official/" target="_blank">
+              <img src="assets/insta-icon.png" loading="lazy" alt="skype"   height="63"/>
+            </a>
+          </div>
+        <div class="row_col_1">
+            <p class="contact_b">Telegram</p>
+          </div>
+        </div>
+      </div>
+
+       <div class="contact_social">
+        <div class="contact_details">
+          <div class="row_col" style="cursor: pointer">
+            <a href="mailto:vrnl.net.info@gmail.com" target="_blank">
+              <img src="assets/mail-icon.png" loading="lazy" alt="skype"   height="63"/>
+            </a>
+          </div>
+         <div class="row_col_1">
+            <p class="contact_b">Telegram</p>
+          </div>
+        </div>
+      </div>
+<!-- 
+       <div class="contact_social">
+        <div class="contact_details">
+          <div class="row_col" style="cursor: pointer">
+            <a href="mailto:vrnl.net.info@gmail.com" target="_blank">
+              <img src="assets/telegarm-logo.png" loading="lazy" alt="skype"   height="63"/>
+            </a>
+          </div>
+        
+        </div>
+      </div> -->
+
+
+
     </div>
 
     <div class="contact_col_1">
