--- a/src/app/our-theme/our-theme.component.css
+++ b/src/app/our-theme/our-theme.component.css
@@ -24,10 +24,12 @@ body {
     justify-content: center;
     margin: 0 auto
 }
-.card2{
+
+.card2 {
     margin-left: 56rem;
-top: 3rem;
+    top: 3rem;
 }
+
 .card-content,
 .card::before {
     position: absolute;
@@ -311,8 +313,8 @@ p {
         padding-top: 7px
     }
 
-    .card2{
-     
+    .card2 {
+
         top: 0rem;
     }
 }
@@ -382,4 +384,28 @@ p {
 
 .disc {
     list-style: disc
+}
+.demo-btn {
+  padding: 8px 16px;
+  background-color: #005dac;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.demo-btn:hover {
+  background-color: #0070d1;
+}
+@media (max-width: 767px) {
+  .demo-btn {
+    width: 100%;
+    font-size: 10px;
+    padding: 14px 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
 }
