--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -10,7 +10,8 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
             <a href="https://t.me/vrnlnet" target="_blank">
-              <img src="assets/telegram-icon.png" loading="lazy" alt="skype"   height="63"/>
+              <img src="assets/telegram-icon.png" loading="lazy" alt="Telegram"  style=" width: 50px;
+    height: 50px;"/>
             </a>
           </div>
           <div class="row_col_1">
@@ -52,11 +53,12 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
             <a href="https://wa.me/918268808222" target="_blank">
-              <img src="assets/Whatsapp.webp" loading="lazy" alt="skype"   height="63"/>
+              <img src="assets/Whatsapp.webp" loading="lazy" alt="Whatsapp"  style=" width: 50px;
+    height: 50px;"/>
             </a>
           </div>
            <div class="row_col_1">
-            <p class="contact_b">Telegram</p>
+            <p class="contact_b">Whatsapp</p>
           </div>
         </div>
       </div>
@@ -65,11 +67,12 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
             <a href="https://www.facebook.com/profile.php?id=61578898121804" target="_blank">
-              <img src="assets/fb-icon.png" loading="lazy" alt="skype"   height="63"/>
+              <img src="assets/fb-icon.png" loading="lazy" alt="Facebook"   style=" width: 50px;
+    height: 50px;"/>
             </a>
           </div>
            <div class="row_col_1">
-            <p class="contact_b">Telegram</p>
+            <p class="contact_b">Facebook</p>
           </div>
         </div>
       </div>
@@ -78,11 +81,12 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
             <a href="https://twitter.com/VRNLOFFICIAL" target="_blank">
-              <img src="assets/twitter-icon.png" loading="lazy" alt="twitter"   height="63"/>
+              <img src="assets/twitter-icon.png" loading="lazy" alt="twitter"  style=" width: 50px;
+    height: 50px;"/>
             </a>
           </div>
           <div class="row_col_1">
-            <p class="contact_b">Telegram</p>
+            <p class="contact_b">Twitter</p>
           </div>
         </div>
       </div>
@@ -92,11 +96,12 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
             <a href="https://www.instagram.com/vrnl_official/" target="_blank">
-              <img src="assets/insta-icon.png" loading="lazy" alt="skype"   height="63"/>
+              <img src="assets/insta-icon.png" loading="lazy" alt="Instagram"  style=" width: 50px;
+    height: 50px;"/>
             </a>
           </div>
         <div class="row_col_1">
-            <p class="contact_b">Telegram</p>
+            <p class="contact_b">Instagram</p>
           </div>
         </div>
       </div>
@@ -105,11 +110,12 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer">
             <a href="mailto:vrnl.net.info@gmail.com" target="_blank">
-              <img src="assets/mail-icon.png" loading="lazy" alt="skype"   height="63"/>
+              <img src="assets/mail-icon.png" loading="lazy" alt="Mail"  style=" width: 50px;
+    height: 50px;"/>
             </a>
           </div>
          <div class="row_col_1">
-            <p class="contact_b">Telegram</p>
+            <p class="contact_b">Mail</p>
           </div>
         </div>
       </div>
